site/_sass/_header.scss
.menuDesktop {
  background-color: #131313;
  display: flex;
  flex-direction: row;
  align-items: center;
  *{
    flex-grow: 0;
  }
  .fill-space{
    flex-grow: 1;
  }
}

.logo {
  padding: .5em;
}

.nav-menu {
  margin-right: 10px;
  margin-left: 10px;
  display: inline-table;

  div, code {
    display: table-cell;
    vertical-align: middle;
    color: #FFFFFF;
    font-weight: bold;
    text-decoration: none;
    font-size: 20px;
    padding: 0 5px;

    ul {
      /* TODO: if possible, insert a padding-top to move the submenu down such that
         the text of the first element starts at the bottom border of the .menuDesktop */
      display: none;
      position: absolute;
      list-style: none;
      margin-left: -10px;
      background-color: #131313;

      li {
        color: #FFFFFF;
        margin: 10px;
      }

      li:hover {
        color: #66aa66;
      }
    }

    ul:hover {
      display: block;
    }
  }

  code{
    cursor: default;
  }

  div{
    cursor: pointer;
  }

  div:hover{
    color: #66aa66;

    ul {
      display: block;
    }
  }
}

.search-box{
  margin-left: 10px;
  margin-right: 10px;

  input{
    outline:none;
    background-color: #131313;
    border: none;
    transition: 500ms;
    border-bottom: 2px solid white;
    opacity:0;
    color: #FFFFFF;
  }

  img{
    vertical-align: middle;
    cursor: pointer;
    width: 22px;
  }
}

.search-box:focus-within {
  input {
    margin-left: 0;
    opacity: 1;
  }
}

